navbar fixed extra margin fixed

--- a/src/common-components/Footer/Footer.css
+++ b/src/common-components/Footer/Footer.css
@@ -1,6 +1,7 @@
 .footer-wrapper{ 
     width: 100%;
-    height: 100vh;
+    /* height: 100vh; */
+    overflow: hidden;
     /* margin-bottom: 10rem; */
 }
 .footer-header{ 
@@ -31,6 +32,7 @@
     align-items: center;
     padding: 1.5rem 2.5rem;
     background-color: var(--footer-body-head);
+    /* display: none;  */
 }
 .footer-body h3{ 
     font-size: 2.25vw;
@@ -39,9 +41,10 @@
 }
 .footer-ph-email{ 
     display: flex;
-    margin-right: 5rem;
+    margin-right: 5rem; /*fix this*/
     gap: 2rem;  
     align-items: center;
+    /* display: none; */
 }
 .footer-items{ 
     display: flex;
@@ -97,6 +100,7 @@
     padding: 3rem 2rem;
     background-color: var(--footer-body-body);
     color: white;
+    /* display: none; */
 }
 .footer-body-items{ 
     width: calc(100%/5);
